--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="notification-container">
         <i class="fas fa-bell-slash"></i>
-        <p class="receive-notification"> Reecba notificações de novas mensagens</p>
+        <p class="receive-notification"> Receba notificações de novas mensagens</p>
         <p class="active-notification"> 
           Ativar notificações na área de trabalho  
           <i class="fas fa-angle-right"></i>
@@ -37,7 +37,7 @@
 
         <div class="contact-box active-chat">
           <img class="user-photo" src="./img/avatar2.png">
-          <div class="User-info">
+          <div class="user-info">
             <p class="user-name">Julia</p>
             <p class="user-messagepreview">
                 <i class="fas fa-check-double"></i> 
@@ -51,7 +51,7 @@
 
         <div class="contact-box">
           <img class="user-photo" src="./img/avatar3.png">
-          <div class="User-info">
+          <div class="user-info">
             <p class="user-name">Ricardo Almeida</p>
             <p class="user-messagepreview">Está disponivel para fazer um freela?</p>
           </div>
@@ -63,7 +63,7 @@
 
         <div class="contact-box">
           <img class="user-photo" src="./img/avatar4.png">
-          <div class="User-info">
+          <div class="user-info">
             <p class="user-name">Rafaela Ribeiro</p>
             <p class="user-messagepreview">Qual é a sua chave pix?</p>
           </div>
@@ -78,7 +78,7 @@
     <main class="chat-container">
       <nav  class="chat-navbar">
         <div class="contactinfo-container">
-        <img class="user-photo" src="./img/avatar1.png">
+        <img class="user-photo" src="./img/avatar2.png">
         <p class="user-name">Julia</p>
         </div>
         <ul class="chattools-container">
@@ -98,9 +98,9 @@
           </p>
         </div>
         <div class="sendmessage-container">
-          <i class="fas fa-grin"></i>
-          <input type="text" name="message" class="userinput" placeholder="Digite uma mensagem">
-          <i class="fas fa-microfone"></i>
+          <i class="far fa-grin"></i>
+          <input type="text" id="chatmessage" name="message" class="userinput" placeholder="Digite uma mensagem">
+          <i class="fas fa-microphone"></i>
         </div>
       </div>
     </main>
